<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="payeco_error_get_order_error">获取订单失败</string>
    <string name="payeco_prompt">提示</string>
    <string name="payeco_confirm">"确  认"</string>
    <string name="payeco_plugin_pay_fail">支付失败</string>
    <string name="payeco_plugin_pay_init_fail">插件初始化失败</string>
    <string name="payeco_plugin_pay_verify_fail">订单验证失败</string>
    <string name="payeco_plugin_initing">正在初始化...</string>
    <string name="payeco_networkError">没有网络连接，请检查网络设置</string>
    <string name="payeco_keyboard">"密  码  键  盘"</string>
    <string name="payeco_keyboard_tips">采用银联标准加密技术传输，保证密码输入安全</string>
    <string name="payeco_keyboard_digital">数字</string>
    <string name="payeco_keyboard_character">字母</string>
    <string name="payeco_keyboard_symbol">符号</string>
    <string name="payeco_keyboard_confirm">"确  定"</string>
    <string name="payeco_keyboard_delete">"回  退"</string>
    <string name="payeco_keyboard_edit_hint">请输入银行卡密码</string>
    <string name="payeco_keyboard_next">下一页</string>
    <string name="payeco_keyboard_pre">上一页</string>
    <string name="payeco_pay_cvn2">卡背面签名栏后三位</string>
    <string name="payeco_pay_validate">有效期:</string>
    <string name="app_name">东京战纪QA</string>
    <string name="language">zh-rCN</string>
    <string name="c_ndqw">您当前为</string>
    <string name="c_zh">账号</string>
    <string name="c_yk">游客</string>
    <string name="c_ydfwtk">请先阅读并同意【服务条款】</string>
    <string name="c_zhmmbnwk">账号或密码不能为空</string>
    <string name="c_hyhl">欢迎回来</string>
    <string name="c_mmbd">密码不对</string>
    <string name="c_zhbcz">账号不存在</string>
    <string name="c_zhgsbd">账号格式不对</string>
    <string name="c_wkywl">无可用网络, 请重试.</string>
    <string name="c_dlz">登陆中</string>
    <string name="c_qx">取消</string>
    <string name="c_zddlcs">自动登录超时, 请重新登录</string>
    <string name="c_dl">登陆</string>
    <string name="c_xzqtfsdl">选择其他方式登陆</string>
    <string name="c_sqgq">授权过期,请重新登录</string>
    <string name="c_qd">确定</string>
    <string name="c_qjkdndyxwcjhbc">请尽快到您的邮箱完成激活步骤，以保证您的帐号安全！</string>
    <string name="c_second">秒</string>
    <string name="c_hqyzm">获取验证码</string>
    <string name="c_sjhtd">手机号太短</string>
    <string name="c_sjhgsbd">手机号格式不对</string>
    <string name="c_scfsdyzmbd">请求过快，请稍后再试！</string>
    <string name="c_qsryzm">请输入验证码</string>
    <string name="c_sjdlmmcdbx">手机登陆密码长度必须6-18位</string>
    <string name="c_sjhybss">手机号已被使用</string>
    <string name="c_yzmgq">验证码过期</string>
    <string name="c_yzmbzq">验证码不正确</string>
    <string name="c_yxdzgscw">邮箱地址格式错误</string>
    <string name="c_yxdlmmcdbx">邮箱登陆密码长度必须6-18位</string>
    <string name="c_emgsbd">Email格式不对</string>
    <string name="c_emybsy">Email已被使用</string>
    <string name="c_czmmcgqcxdl">重置密码成功！请重新登录。</string>
    <string name="c_yyzmygqqcxhq">验证码已过期。请重新获取！</string>
    <string name="c_csjhmbwglrhzh">此手机号码并未关联任何账户！请确认手机号或联系客服人员。</string>
    <string name="c_wmyxndzcyxzfslczyj">我们已向您的注册邮箱中发送了重置邮件，请确认后重新登录。</string>
    <string name="c_czmmsb">重置密码失败，此邮箱并未关联到账户！</string>
    <string name="p_zh">账号:</string>
    <string name="p_bdsjyx" />
    <string name="p_mm">密码:</string>
    <string name="p_kszc">快速注册</string>
    <string name="p_ljdl">立即登录</string>
    <string name="p_tybjs">同意并接受</string>
    <string name="p_fwtk">服务条款</string>
    <string name="p_wjmm">忘记密码</string>
    <string name="p_dl">登录</string>
    <string name="p_yk">游客</string>
    <string name="p_xzqtfsdl">选择其他方式登陆</string>
    <string name="p_qxznddlfs">请选择您的登陆方式</string>
    <string name="p_ykdl">游客登录</string>
    <string name="p_zhmmdl">账号密码登陆</string>
    <string name="p_sjhzc">手机号注册</string>
    <string name="p_yxzc">邮箱注册</string>
    <string name="p_sjh">手机号:</string>
    <string name="p_yyjsyzdx">用于接收验证短信</string>
    <string name="p_yzm">验证码:</string>
    <string name="p_qsryzm">请输入验证码</string>
    <string name="p_hqyzm">获取验证码</string>
    <string name="p_mm2">密 码:</string>
    <string name="p_sjdlmmcd">手机登陆密码长度6-18位</string>
    <string name="p_yxh">邮箱号:</string>
    <string name="p_yyjsyzxx">用于接收验证信息</string>
    <string name="p_yxdlmmcd">邮箱登陆密码长度6-18位</string>
    <string name="p_tj">提 交</string>
    <string name="p_czmm">重置密码</string>
    <string name="p_sjhcz">按手机号重置</string>
    <string name="p_ayxcz">按邮箱重置</string>
    <string name="p_xmm">新密码:</string>
    <string name="p_tool_bar_call">客服</string>
    <string name="p_tool_bar_logout">注销</string>
    <string name="p_tool_bar_info">信息</string>
    <string name="p_tool_bar_bind">绑定</string>
    <string name="p_tool_bar_shop">商城</string>
    <string name="p_tool_bar_guide">攻略</string>
    <string name="p_check_valid">验证</string>
    <string name="p_vcode_refresh">刷新验证码</string>
    <string name="p_vcode_refresh_fail">获取验证码失败，请重试</string>
    <string name="p_vcode_error">图形验证码错误，请重试</string>
</resources>
