<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/user_center_corners" android:layout_width="310.0dip" android:layout_height="236.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="17.0sp" android:textColor="@color/text_color_dark" android:gravity="center" android:id="@id/textView1" android:paddingTop="15.0dip" android:layout_width="265.0dip" android:layout_height="40.0dip" android:text="@string/p_qxznddlfs" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/text_color_light_more" android:id="@id/button2" android:background="@drawable/user_center_button" android:layout_width="265.0dip" android:layout_height="45.0dip" android:layout_marginTop="17.0dip" android:text="@string/p_zhmmdl" android:layout_below="@id/textView1" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/text_color_default" android:id="@id/button1" android:background="@drawable/user_center_button_reverse" android:layout_width="265.0dip" android:layout_height="45.0dip" android:layout_marginTop="17.0dip" android:text="@string/p_ykdl" android:layout_below="@id/button2" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/imageView4" android:background="@drawable/user_center_rect_dark_botton" android:paddingLeft="70.0dip" android:paddingRight="70.0dip" android:layout_width="310.0dip" android:layout_height="45.0dip" android:layout_marginTop="27.0dip" android:src="@drawable/user_center_ppgame_logo" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>