<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/user_center_corners" android:layout_width="310.0dip" android:layout_height="291.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/imageView4" android:background="@drawable/user_center_rect_dark_botton" android:paddingLeft="70.0dip" android:paddingRight="70.0dip" android:layout_width="310.0dip" android:layout_height="45.0dip" android:layout_marginTop="27.0dip" android:src="@drawable/user_center_ppgame_logo" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/text_color_light_more" android:id="@id/button1" android:background="@drawable/user_center_button" android:layout_width="265.0dip" android:layout_height="45.0dip" android:text="@string/p_dl" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <TextView android:textSize="18.0sp" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip" android:text="@string/p_yk" android:layout_below="@id/imageView1" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/text_color_default" android:id="@id/button2" android:background="@drawable/user_center_button_reverse" android:layout_width="265.0dip" android:layout_height="45.0dip" android:layout_marginTop="19.0dip" android:text="@string/p_xzqtfsdl" android:layout_below="@id/button1" android:layout_alignLeft="@id/button1" />
    <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:src="@drawable/user_center_user_head_icon" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
</RelativeLayout>