<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/user_center_corners" android:layout_width="310.0dip" android:layout_height="290.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/imageView1" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <RelativeLayout android:id="@id/account_layout" android:background="@drawable/user_center_rect_gray" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="250.0dip" android:layout_height="40.0dip">
            <ImageView android:id="@id/imageView2" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/user_center_icon_user" android:layout_centerVertical="true" />
            <TextView android:textSize="15.0sp" android:textColor="@color/text_color_light" android:gravity="center" android:id="@id/left_text" android:layout_width="@dimen/text_width1" android:layout_height="40.0dip" android:text="@string/p_zh" android:layout_toRightOf="@id/imageView2" android:layout_alignParentTop="true" />
            <EditText android:textSize="15.0sp" android:id="@id/editText1" android:background="@color/bg_light" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/p_bdsjyx" android:ems="10" android:layout_toLeftOf="@id/select_list" android:layout_toRightOf="@id/left_text" android:layout_alignBottom="@id/imageView2" android:inputType="text" />
            <ToggleButton android:id="@id/select_list" android:background="@drawable/user_center_account_list" android:paddingRight="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:textOn="" android:textOff="" android:text="" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:background="@drawable/user_center_rect_gray" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="250.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip">
            <ImageView android:id="@id/imageView3" android:paddingLeft="7.0dip" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/user_center_icon_lock" android:layout_centerVertical="true" />
            <TextView android:textSize="15.0sp" android:textColor="@color/text_color_light" android:gravity="center" android:id="@id/left_text2" android:layout_width="@dimen/text_width1" android:layout_height="40.0dip" android:text="@string/p_mm" android:layout_toRightOf="@id/imageView3" android:layout_alignParentTop="true" />
            <EditText android:textSize="15.0sp" android:id="@id/editText3" android:background="@color/bg_light" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:layout_toRightOf="@id/left_text2" android:layout_alignBottom="@id/imageView3" android:inputType="textPassword" />
        </RelativeLayout>
        <Button android:textSize="16.0sp" android:textColor="@color/text_color_light_more" android:id="@id/button2" android:background="@drawable/user_center_button_toggle" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/p_ljdl" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        <RelativeLayout android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@id/checkBox1" android:visibility="invisible" android:layout_width="@dimen/checkBox_width" android:layout_height="40.0dip" android:button="@drawable/user_center_check_box_background" android:layout_alignParentLeft="true" />
            <TextView android:textSize="@dimen/text_size1" android:textColor="@color/text_color_dark_more" android:id="@id/textView1" android:paddingLeft="10.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/p_tybjs" android:layout_alignBaseline="@id/button4" android:layout_alignRight="@id/checkBox1" android:layout_alignBottom="@id/checkBox1" />
            <Button android:textSize="@dimen/text_size1" android:textColor="@drawable/user_center_botton_color_selector" android:id="@id/button4" android:background="@drawable/user_center_empty_selector" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/p_fwtk" android:layout_toRightOf="@id/checkBox1" android:layout_alignParentTop="true" />
            <Button android:textSize="@dimen/text_size1" android:textColor="@drawable/user_center_botton_color_selector" android:id="@id/button1" android:background="@drawable/user_center_empty_selector" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/p_kszc" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <Button android:textSize="@dimen/text_size1" android:textColor="@drawable/user_center_botton_color_selector" android:id="@id/button3" android:background="@drawable/user_center_empty_selector" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/p_wjmm" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
    <ImageView android:id="@id/imageView1" android:paddingTop="15.0dip" android:layout_width="101.0dip" android:layout_height="60.0dip" android:src="@drawable/user_center_title_log" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <ImageButton android:id="@id/imageButton1" android:background="@drawable/user_center_empty_selector" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/user_center_back" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <ImageView android:id="@id/imageView4" android:background="@drawable/user_center_rect_dark_botton" android:paddingLeft="70.0dip" android:paddingRight="70.0dip" android:layout_width="310.0dip" android:layout_height="45.0dip" android:src="@drawable/user_center_ppgame_logo" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>