<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/user_center_corners" android:layout_width="310.0dip" android:layout_height="330.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:id="@id/imageButton1" android:background="@drawable/user_center_empty_selector" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/user_center_back" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <TextView android:textSize="17.0sp" android:textColor="@color/text_color_dark" android:gravity="center" android:id="@id/textView1" android:paddingTop="18.0dip" android:layout_width="265.0dip" android:layout_height="40.0dip" android:text="@string/p_kszc" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_below="@id/textView1" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <RelativeLayout android:layout_width="250.0dip" android:layout_height="wrap_content">
            <ToggleButton android:textSize="18.0sp" android:textColor="@drawable/user_center_toggle_button_text_color" android:id="@id/button1" android:background="@drawable/user_center_toggle_button_background" android:layout_width="125.0dip" android:layout_height="39.0dip" android:textOn="@string/p_sjhzc" android:textOff="@string/p_sjhzc" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <ToggleButton android:textSize="18.0sp" android:textColor="@drawable/user_center_toggle_button_text_color" android:id="@id/button2" android:background="@drawable/user_center_toggle_button_background" android:layout_width="125.0dip" android:layout_height="39.0dip" android:textOn="@string/p_yxzc" android:textOff="@string/p_yxzc" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/linearLayout1" android:layout_centerHorizontal="true">
        <RelativeLayout android:id="@id/relativeLayout1" android:background="@drawable/user_center_rect_gray" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="250.0dip" android:layout_height="40.0dip">
            <TextView android:textSize="@dimen/text_size2" android:textColor="@color/text_color_light" android:gravity="center" android:id="@id/left_text" android:layout_width="@dimen/text_width2" android:layout_height="40.0dip" android:text="@string/p_sjh" android:layout_alignParentTop="true" />
            <EditText android:textSize="@dimen/text_size2" android:id="@id/editText1" android:background="@color/bg_light" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:layout_toRightOf="@id/left_text" android:layout_centerVertical="true" android:inputType="number" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <RelativeLayout android:background="@drawable/user_center_rect_gray" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="180.0dip" android:layout_height="40.0dip">
                <TextView android:textSize="@dimen/text_size2" android:textColor="@color/text_color_light" android:gravity="center" android:id="@id/left_text2" android:layout_width="@dimen/text_width2" android:layout_height="40.0dip" android:text="@string/p_yzm" android:layout_alignParentTop="true" />
                <EditText android:textSize="@dimen/text_size2" android:id="@id/editText3" android:background="@color/bg_light" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:layout_toRightOf="@id/left_text2" android:layout_centerVertical="true" android:inputType="text" />
            </RelativeLayout>
            <ToggleButton android:textSize="@dimen/text_size3" android:textColor="@color/text_color_light_more" android:id="@id/button3" android:background="@drawable/user_center_button_toggle" android:layout_width="60.0dip" android:layout_height="40.0dip" android:textOn="@string/p_hqyzm" android:textOff="@string/p_hqyzm" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <RelativeLayout android:background="@drawable/user_center_rect_gray" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="250.0dip" android:layout_height="40.0dip" android:layout_marginTop="5.0dip">
            <TextView android:textSize="@dimen/text_size2" android:textColor="@color/text_color_light" android:gravity="center" android:id="@id/left_text3" android:layout_width="@dimen/text_width2" android:layout_height="40.0dip" android:text="@string/p_mm2" android:layout_alignParentTop="true" />
            <EditText android:textSize="@dimen/text_size2" android:id="@id/editText4" android:background="@color/bg_light" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_toLeftOf="@id/qr_tele_pwd" android:layout_toRightOf="@id/left_text3" android:layout_centerVertical="true" android:inputType="textPassword" />
            <ToggleButton android:id="@id/qr_tele_pwd" android:background="@drawable/user_center_pwd_selector" android:paddingRight="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:textOn="" android:textOff="" android:text="" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout3" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/linearLayout1" android:layout_centerHorizontal="true">
        <RelativeLayout android:background="@drawable/user_center_rect_gray" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="250.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip">
            <TextView android:textSize="@dimen/text_size2" android:textColor="@color/text_color_light" android:gravity="center" android:id="@id/left_text1" android:layout_width="@dimen/text_width2" android:layout_height="40.0dip" android:text="@string/p_yxh" android:layout_alignParentTop="true" />
            <EditText android:textSize="@dimen/text_size2" android:id="@id/editText5" android:background="@color/bg_light" android:paddingTop="0.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:layout_toRightOf="@id/left_text1" android:layout_centerVertical="true" android:inputType="textEmailAddress" />
        </RelativeLayout>
        <RelativeLayout android:background="@drawable/user_center_rect_gray" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="250.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip">
            <TextView android:textSize="@dimen/text_size2" android:textColor="@color/text_color_light" android:gravity="center" android:id="@id/left_text7" android:layout_width="@dimen/text_width2" android:layout_height="40.0dip" android:text="@string/p_mm2" android:layout_alignParentTop="true" />
            <EditText android:textSize="@dimen/text_size2" android:id="@id/editText9" android:background="@color/bg_light" android:paddingTop="0.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_toLeftOf="@id/qr_email_pwd" android:layout_toRightOf="@id/left_text7" android:layout_centerVertical="true" android:inputType="textPassword" />
            <ToggleButton android:id="@id/qr_email_pwd" android:background="@drawable/user_center_pwd_selector" android:paddingRight="5.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:textOn="" android:textOff="" android:text="" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <Button android:textSize="18.0sp" android:textColor="@color/text_color_light_more" android:id="@id/button6" android:background="@drawable/user_center_button" android:layout_width="250.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/p_tj" android:layout_below="@id/linearLayout2" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/imageView4" android:background="@drawable/user_center_rect_dark_botton" android:paddingLeft="70.0dip" android:paddingRight="70.0dip" android:layout_width="310.0dip" android:layout_height="45.0dip" android:src="@drawable/user_center_ppgame_logo" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>