<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="bottom" android:background="#70000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="bottom" android:id="@id/payeco_keyboardLayout" android:background="#ffc6cfd9" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/payeco_keyboardKey" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="5.0dip">
            <ImageView android:id="@id/payeco_keyboard_key" android:background="@drawable/payeco_plugin_topicon" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="15.0sp" android:textColor="#ff687887" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="银联安全键盘" />
        </LinearLayout>
        <LinearLayout android:id="@id/payeco_keyboardTips" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_below="@id/payeco_keyboardKey">
            <TextView android:textSize="14.0sp" android:textColor="#ff687887" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/payeco_keyboard_tips" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/payeco_keyboard" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/payeco_keyboardTips">
            <View android:background="#ffc1c1c1" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <LinearLayout android:gravity="center_vertical" android:id="@id/payeco_keyboard_editText" android:background="#ffebecee" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip">
                <EditText android:textSize="@dimen/payeco_pwkeyboard_button_textsize" android:textColorHint="#ff687887" android:gravity="center_vertical" android:id="@id/payeco_keyboard_password" android:background="@drawable/payeco_plugin_editbg" android:paddingLeft="5.0dip" android:focusable="false" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/payeco_keyboard_edit_hint" android:singleLine="true" android:layout_weight="0.2" android:inputType="textPassword" />
                <Button android:textSize="15.0sp" android:textColor="#ff333333" android:id="@id/payeco_confirm_keyboard" android:background="@drawable/payeco_plugin_editbg" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/payeco_keyboard_confirm" android:layout_weight="0.8" />
            </LinearLayout>
            <RelativeLayout android:id="@id/payeco_keyboardBodyLayout" android:layout_width="fill_parent" android:layout_height="180.0dip">
                <LinearLayout android:orientation="vertical" android:id="@id/payeco_digitBodyLayout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <View android:background="#ffc1c1c1" android:layout_width="fill_parent" android:layout_height="1.0px" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/payeco_digit_display_1" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
                        <Button android:id="@id/payeco_digit_1" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                        <Button android:id="@id/payeco_digit_2" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                        <Button android:id="@id/payeco_digit_3" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:id="@id/payeco_digit_display_2" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
                        <Button android:id="@id/payeco_digit_4" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                        <Button android:id="@id/payeco_digit_5" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                        <Button android:id="@id/payeco_digit_6" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:id="@id/payeco_digit_display_3" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
                        <Button android:id="@id/payeco_digit_7" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                        <Button android:id="@id/payeco_digit_8" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                        <Button android:id="@id/payeco_digit_9" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:id="@id/payeco_digit_display_4" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
                        <Button android:id="@id/payeco_keyborad_cancel" android:text="取  消" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                        <Button android:id="@id/payeco_digit_0" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx" />
                        <LinearLayout android:id="@id/payeco_digit_clear" android:clickable="true" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" style="@style/payeco_keyboardDigitButton_hx">
                            <ImageView android:layout_gravity="center" android:background="@drawable/payeco_plugin_back" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>